# demsausage

./: .env  .gitignore  .pre-commit-config.yaml  .travis.yml  ANALYTICS.md  DEV_WORKFLOWS.md  ENVIRONMENTS.md  FEDERAL_ELECTIONS.md  FOO.md  ISSUES.md  LICENSE.md  LOADER_REDESIGN_PLAN.md  MPP_SUBTASK_REDESIGN_SPEC.md  README.md  STATE_ELECTIONS.md  biome.json  build.sh  build.yml  build_production.yml  build_staging.sh  build_staging.yml  docker-compose-buildjs.prod-local.yml  docker-compose-buildjs.yml  docker-compose-buildpy.yml  docker-compose-prod.yml  docker-compose.yml  pollingPlacesQldSample.csv  prodbuild-dockerpush-nginx.sh  prodbuild-dockerpush.sh  prodbuild-local.sh  prodbuild-nginx.sh  prodbuild.sh  secrets.php.template  secrets.tar.enc
django/: .gitignore  Dockerfile  build-static-assets.sh  db_migration.py  docker-entrypoint.sh  foo.sh  gunicorn.conf.py  manage.py  pyproject.toml  requirements.txt  setup.py  supervisord.conf  uwsgi.ini
django/demsausage/: settings.py  urls.py  util.py  wsgi.py
django/demsausage/analysis/: federal_elections_submitter_emails.py  submitter_emails.py
django/demsausage/analysis/nginx/: access.py
django/demsausage/app/: __init__.py  admin.py  apps.py  auth.py  enums.py  exceptions.py  filters.py  managers.py  models.py  permissions.py  renderers.py  schemas.py  serializers.py  signals.py  urls.py  validators.py  views.py  webdriver.py
django/demsausage/app/migrations/: 0001_initial.py  0002_auto_20190114_1113.py  0002_auto_20190114_1113_squashed_0020_remove_stalls_is_active.py  0002_pollingplaces_chance_of_sausage.py  0003_elections_mailgunevents.py  0003_historicalpollingplacenoms_historicalpollingplaces_historicalstalls.py  0003_remove_pollingplacenoms_chance_of_sausage.py  0004_auto_20190126_1026.py  0004_auto_20190127_0602.py  0004_auto_20190223_0843.py  0005_auto_20190126_1055.py  0005_auto_20190127_0626.py  0005_auto_20190223_0930.py  0006_auto_20190126_1058.py  0006_auto_20190127_0757.py  0006_pollingplaceloaderevents.py  0007_auto_20190126_1101.py  0007_auto_20190127_0826.py  0007_auto_20190403_0930.py  0008_auto_20190126_1102.py  0008_auto_20190127_1018.py  0008_auto_20190404_1141.py  0009_auto_20190127_1031.py  0009_auto_20190404_1315.py  0009_pollingplaces_election.py  0010_auto_20190126_1113.py  0010_auto_20190127_1033.py  0010_elections_geom2.py  0011_auto_20190126_1115.py  0011_remove_elections_geom.py  0011_remove_elections_is_active.py  0012_auto_20190126_1116.py  0012_auto_20190128_0628.py  0012_auto_20190421_1339.py  0013_auto_20190126_1119.py  0013_auto_20190128_0634.py  0013_remove_elections_default_zoom_level.py  0014_auto_20190126_1127.py  0014_auto_20190128_0635.py  0014_auto_20190422_0113.py  (+63 more)
django/demsausage/app/sausage/: .env  chance_of_sausage.py  (+7 more)
django/demsausage/rq/: custom_classes.py  init.py  jobs.py  jobs_loader.py  rq_utils.py  supervisord.dev.conf
django/tests/: conftest.py
django/tests/loader/: test_check_validity.py  test_config_validation.py  test_convert.py  test_data_integrity.py  test_detect_facility.py  test_find_home_division.py  test_geocode.py  test_known_bugs.py  test_migrate_mpps.py  test_migrate_noms.py  test_migrate_stalls.py  test_overseas.py  test_transforms.py  test_validate.py  test_write.py  test_write_fields.py
django/tests/mpp/: conftest.py  test_facility_types.py  test_lookup_has_approved_subs.py  test_mpp_complete.py  test_mpp_queue.py  test_mpp_update.py  test_rearrange.py
(+1068 files in other folders)
