[tool.poetry]
name = "demsausage"
version = "0.1.0"
description = ""
authors = ["Keith Moss <keithamoss@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2.15"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.4.0"
django-model-utils = "^4.5.1"
googlemaps = "^4.10.0"
gunicorn = "^22.0.0"
gevent = "^22.10.1"
greenlet = "^1.1.3"
social-auth-app-django = "^5.4.2"
social-auth-core = "^4.5.4"
sentry-sdk = "^2.12.0"
django-simple-history = "^3.7.0"
jsonschema = "^4.23.0"
django-pymemcache = "^1.0.0"
djangorestframework-gis = "^1.0"
django-filter = "24.3"
djangorestframework-csv = "^3.0.2"
requests = "^2.32.3"
chardet = "^5.2.0"
drf-spectacular = "^0.27.2"
selenium = "^4.23.1"
webdriver-manager = "^4.0.2"
pytz = "^2024.1"
rq = "^1.16.2"
django-rq = "^2.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"