[tool.poetry]
name = "demsausage"
version = "0.1.0"
description = ""
authors = ["Keith Moss <keithamoss@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2.16"
psycopg2-binary = "^2.9.10"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.6.0"
django-model-utils = "^5.0.0"
googlemaps = "^4.10.0"
gunicorn = "^23.0.0"
gevent = "^22.10.1"
greenlet = "^1.1.3"
social-auth-app-django = "^5.4.2"
social-auth-core = "^4.5.4"
sentry-sdk = "^2.19.0"
django-simple-history = "^3.7.0"
jsonschema = "^4.23.0"
django-pymemcache = "^1.0.0"
djangorestframework-gis = "^1.0"
django-filter = "21.1"
djangorestframework-csv = "^2.1.1"
requests = "^2.31.0"
chardet = "^5.2.0"
drf-spectacular = "^0.27.2"
selenium = "^4.26.1"
webdriver-manager = "^4.0.2"
pytz = "^2024.2"
rq = "^1.16.2"
django-rq = "^2.10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"